* Rewrite Event cache to avoid memory leaks in IE and unnecessary iterations. [#230 state:resolved] [jddalton]

* Ensure dom:loaded timer is always cleared. [#346 state:resolved] [Mike Belshe]

* Remove unused local variable "h" from Selector.handlers.child(). [#246 state:resolved] [jddalton]

* Fix issue where Opera 9.5 gets confused by complex selectors in $$(). [#157 state:resolved] [Andre Dupont. Paulo Pereira, Andrea Baron, jddalton]

* Make Element#readAttribute follow W3C specifications for Element#getAttribute by returning an empty string if there is no specified/default value. [jddalton]

* Ensure Form.serializeElements() does not return keys from the prototype chain (e.g., constructor, valueOf, toString). Closes #9609. [gryn, jddalton, kangax]

* Rewrite Form#serializeElements() making it more closely follow the W3C specifications. [#22, #85 state:resolved] [jddalton, kangax, Lonesome Boy]
  - Simulate input type=image coordinates with "x" and "y" options.
  - Make the "submit" option accept the element or element name.
  - Non-active submit buttons, disabled elements, input type=(file|reset), and null values are not serialized.

* Make Form#request pass the "submit" option to Form#serialize. [#66 state:resolved] [Ben Sommerville, jddalton, jodosha]

* Make $F return null for unknown/unsupported elements. Closes #8381. [Christophe Porteneuve, jddalton, Michael Stillwell]

* Make Form.Element#clear uncheck checkboxes/radio buttons, clear text inputs, deselect dropdown lists options, and skip button elements. [jddalton]

* Extend BUTTON elements with Form.Element.Methods. Closes #9708. [jddalton, mensler]

* unit test: Cleaned up testFormActivating unit test. [jddalton]

* Ensure Form#focusFirstElement skips Form.Element#activate if there is no first element. [Alexander Chernin, kangax]

* Rename confusing variables in Form.Element.Serializers.select(). [#180 state:resolved] [jddalton]
