@@ -1,3 +1,5 @@
+* Add Event#getEventID to fix issues with event IDs on elements created by Element#cloneNode. [jddalton]
+
 * Rewrite Event cache to avoid memory leaks in IE and unnecessary iterations. [#230 state:resolved] [jddalton]
 
 * Ensure dom:loaded timer is always cleared. [#346 state:resolved] [Mike Belshe]
